_sass/_animations.scss
/**
 * Animations
 */
@keyframes fade-in {
  from { opacity: 0; }
  to { opacity: 1; }
}

.fade-in {
  will-change: opacity;
  animation: fade-in 2s both;
}

#arrow-down {
  max-width: 50px;
  text-align: center;
  display: block;
  position: absolute;
  margin-left: auto;
 	margin-right: auto;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 99;
  i {
    color: #FFFFFF;
    font-size: 75px;
  }
}

